fix: SKFP-1065 add spacing in mondo code display

--- a/src/views/DataExploration/components/PageContent/tabs/Biospecimens/index.module.scss
+++ b/src/views/DataExploration/components/PageContent/tabs/Biospecimens/index.module.scss
@@ -9,3 +9,9 @@
         min-width: 300px;
     }
 }
+
+.mondoList {
+    list-style-type: none;
+    padding-inline-start: 0;
+    margin-block-end: 0;
+}
